# India-Runs

./: .gitignore  Makefile  README.md  pyproject.toml  rank.py  requirements.txt  submission_debug.json  submission_metadata.yaml  validate_submission.py
sandbox/: app.py  requirements.txt
scripts/: eda.py  precompute_embeddings.py
src/: __init__.py  config.py  features.py  jd_parser.py  loading.py  pipeline.py  reasoning.py  skill_graph.py  text_channel.py
src/redrob_ranker/: __init__.py  config.py  dates.py  features.py  loading.py  pipeline.py  reasoning.py  text_channel.py
tests/: test_smoke.py
