[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "candidate-ranker"
version = "0.1.0"
description = "CPU-only, fully-offline candidate ranker (India Runs Data & AI Challenge)."
authors = []
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12"
numpy = ">=2.5.0,<3"
scikit-learn = ">=1.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"

[tool.poetry.scripts]
candidate-ranker = "rank:main"
